🚧 스토리북 7업데이트 및 리엑트환경으로 변경

--- a/pure-storybook/stories/colors.stories.mdx
+++ b/pure-storybook/stories/colors.stories.mdx
@@ -1,6 +1,7 @@
 <Meta title="Docs/Colors" />
 
-<style>{`
+<style>
+  {`
   .color-list .color-item {
     display: flex;
     justify-content: flex-start;
@@ -96,7 +97,8 @@
     color: #191A20;
   }
   
- `}</style>
+   `}
+</style>
 
 # Colors
 
