--- a/pure-storybook/stories/typography.stories.mdx
+++ b/pure-storybook/stories/typography.stories.mdx
@@ -1,6 +1,7 @@
 <Meta title="Docs/Typography" />
 
-<style>{`
+<style>
+  {`
   dt.title {
     font-style: initial;
   }
@@ -53,7 +54,8 @@
     font-weight: 700;
   }
   
- `}</style>
+   `}
+</style>
 
 # Typography
 
