홈화면 타이틀 변경

--- a/src/stories/IntroDocs.mdx
+++ b/src/stories/IntroDocs.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/blocks';
+
+<Meta title="Hello Storybook" />
+
 ## 환영인사 🎉
 
 ![wellcome](https://gifdb.com/images/high/welcome-greeting-1y2timm763pcwtl2.gif)
