--- a/libs/storybook/src/components/ButtonDocs.mdx
+++ b/libs/storybook/src/components/ButtonDocs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary } from '@storybook/blocks';
 import * as ButtonStories from './Button.stories';
 
 <Meta of={ButtonStories} />
