--- a/libs/storybook/src/stories/style/Typography.mdx
+++ b/libs/storybook/src/stories/style/Typography.mdx
@@ -71,7 +71,7 @@ export const SampleText2 = '1 2 3 4 5 6 7 8 9 0';
     Number(textTypography.size.l2),
     Number(textTypography.size.l3),
   ]}
-  fontWeight={textTypography.weight.black}
+  fontWeight={Number(textTypography.weight.black)}
   sampleText={SampleText1}
   fontFamily={textTypography.type.primary}
 />
@@ -95,7 +95,7 @@ export const SampleText2 = '1 2 3 4 5 6 7 8 9 0';
     Number(numberTypography.size.l2),
     Number(numberTypography.size.l3),
   ]}
-  fontWeight={numberTypography.weight.black}
+  fontWeight={Number(numberTypography.weight.black)}
   sampleText={SampleText2}
   fontFamily={numberTypography.type.primary}
 />
